# internal/handlers/handler.go
@@ -2,8 +2,11 @@ package handlers
 
 import (
 	"miniapp/internal/handlers/handler_repository"
+	"miniapp/internal/infrastructure/database/storage"
+	"miniapp/internal/service"
 	"miniapp/internal/service/customer/customer_repository"
 	"miniapp/pkg/logger"
+	"net/http"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -11,22 +14,33 @@ import (
 )
 
 type Handler struct {
-	logger          *logger.Logger
-	customerService customer_repository.Customer
+	logger   *logger.Logger
+	storage  storage.Storage
+	customer customer_repository.Customer
 }
 
-func NewHandler(logger *logger.Logger, c customer_repository.Customer) handler_repository.Handler {
+func NewHandler(logger *logger.Logger, storage storage.Storage) handler_repository.Handler {
 	return &Handler{
-		logger:          logger,
-		customerService: c,
+		logger:   logger,
+		customer: service.NewCustomerService(storage),
 	}
 }
 
 func (h *Handler) Register(r *gin.Engine) {
 	r.Use(gin.Logger())
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler)) // swagger handler
 
+	r.GET("/hello", h.Hello)
+
 	r.GET("/customer/:id", h.GetCustomerById)
+	r.GET("/customer/", h.GetCustomerList)
 	r.POST("/customer", h.CreateCustomer)
-	r.PATCH("/customer/:id", h.UpdateCustomer)
+	r.PATCH("/customer/", h.UpdateCustomer)
+}
+
+func (h *Handler) Hello(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"hello": "world",
+	})
 }
